update japanese page

--- a/ja/index.html
+++ b/ja/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CCZTCJYRD8"></script>
@@ -17,7 +17,7 @@
 
 <header>
   <a href="https://kanamesasaki.github.io/">Author's page</a> &#187;
-  <a href="index.html">Ray Tracing in WebGL</a>
+  <a href="index.html">WebGLでレイトレーシング</a>
   <span style="float: right"><ul class="select-lang">
       <li><a href="../en/index.html">English</a></li>
       <li><a href="../de/index.html">Deutsch</a></li>
@@ -25,29 +25,29 @@
   </ul></span>
 </header>
 <body>
-  <h1>Ray Tracing in WebGL</h1>
-  <h2>Introduction</h2>
+  <h1>WebGLでレイトレーシング</h1>
+  <h2>はじめに</h2>
   <p>
-    In this page, basic technics to perform ray tracing are explained. By using the WebGL, it is possible to present the ray tracing results on the web browser.<br>
+    WebGLとJavaScriptを用いてレイトレーサを実装すると，Webブラウザ上に計算結果を表示することができます．ここではレイトレーシングの基礎と，WebGLを用いて実装を行う上でのTipsを解説します．<br>
     Repository: <a href="https://github.com/kanamesasaki/raytracing">https://github.com/kanamesasaki/raytracing</a><br>
   </p>
 
-  <h2>Ray Tracing Basics</h2>
+  <h2>レイトレースとWebGLの基礎知識</h2>
   <ul>
-    <li><a href="jest.html">Jest testing environment for ES6 modules without Babel</a></li>
-    <li><a href="import-shader.html">How to import GLSL shader scripts from JavaScript</a></li>
-    <li><a href="">Camera rotation</a></li>
+    <li><a href="jest.html">ES6モジュールをBabelなしでJestテストする方法</a></li>
+    <li><a href="import-shader.html">GLSLシェーダーコードをJavaScriptから読み込む方法</a></li>
+    <li><a href="">カメラの回転移動について</a></li>
   </ul>
 
-  <h2>Rendering of Primitive Shapes</h2>
+  <h2>基礎形状のレンダリング</h2>
   <ul>
-    <li><a href="sphere.html">Sphere</a></li>
-    <li><a href="rectangle.html">Rectangle</a></li>
-    <li><a href="triangle.html">Triangle</a></li>
-    <li><a href="disk.html">Disk</a></li>
-    <li><a href="cylinder.html">Cylinder</a></li>
-    <li><a href="cone.html">Cone</a></li>
-    <li><a href="paraboloid.html">Paraboloid</a></li>
+    <li><a href="sphere.html">球面</a></li>
+    <li><a href="rectangle.html">長方形</a></li>
+    <li><a href="triangle.html">三角形</a></li>
+    <li><a href="disk.html">円板</a></li>
+    <li><a href="cylinder.html">円柱</a></li>
+    <li><a href="cone.html">円錐</a></li>
+    <li><a href="paraboloid.html">放物面</a></li>
   </ul>
 
   <div class="screen">
@@ -65,7 +65,7 @@
 
 <footer>
   <a href="https://kanamesasaki.github.io/">Author's page</a> &#187;
-  <a href="index.html">Ray Tracing in WebGL</a>
+  <a href="index.html">WebGLでレイトレーシング</a>
   <span style="float: right">Copyright 2021, Kaname Sasaki</span>
 </footer>
 </html>
