--- a/ja/jest.html
+++ b/ja/jest.html
@@ -1,15 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CCZTCJYRD8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CCZTCJYRD8');
+    </script>
     <meta charset="UTF-8">
-    <title>Jest testing environment for ES6 modules without Babel - Ray Tracing in WebGL</title>
+    <title>ES6モジュールをBabelなしでJestテストする方法 - WebGLでレイトレーシング</title>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <link rel="stylesheet" href="../style.css">
   </head>
   <header>
-    <a href="index.html">Ray Tracing in WebGL</a> &#187;
-    <a href="jest.html">Jest testing environment for ES6 modules without Babel</a>
+    <a href="index.html">WebGLでレイトレーシング</a> &#187;
+    <a href="jest.html">ES6モジュールをBabelなしでJestテストする方法</a>
     <span style="float: right"><ul class="select-lang">
         <li><a href="../en/index.html">English</a></li>
         <li><a href="../de/index.html">Deutsch</a></li>
@@ -18,12 +27,12 @@
   </header>
 
   <body>
-    <h1>Jest testing environment for ES6 modules without Babel</h1>
-    <h2>Create npm project</h2>
-    <p>プロジェクトを作成したいディレクトリ(ここではC:\projects\raytracer)で以下のコマンドを打つ．</p>
-<pre><code>C:\projects\raytracer>npm init</code></pre>
+    <h1>ES6モジュールをBabelなしでJestテストする方法</h1>
+    <h2>npmプロジェクトの作成</h2>
+    <p>プロジェクトを作成したいディレクトリ(ここではC:\projects\raytracing)で以下のコマンドを打つ．</p>
+<pre><code>C:\projects\raytracing>npm init</code></pre>
     <p>以下のようにいくつか質問に答えていくと，自動的にpackage.jsonファイルが作成される．</p>
-<pre><code>package name: (raytracer)
+<pre><code>package name: (raytracing)
 version: (1.0.0)
 description:
 entry point: (index.js)
@@ -32,10 +41,10 @@ git repository:
 keywords:
 author: Kaname Sasaki
 license: (ISC) MIT
-About to write to C:\projects\raytracer\package.json:
+About to write to C:\projects\raytracing\package.json:
 
 {
-  "name": "raytracer",
+  "name": "raytracing",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -51,10 +60,13 @@ About to write to C:\projects\raytracer\package.json:
 
 Is this OK? (yes)
 </code></pre>
-    <h2>Jest settings</h2>
+
+    <h2>Jestの設定</h2>
+    <p>以下のコマンドでJestをインストールする．</p>
+<pre><code>C:\projects\raytracing>npm install --save-dev jest</code></pre>
     <p>package.jsonに以下のように"scripts"と"type"の設定を追加する．</p>
 <pre><code>{
-  "name": "raytracer",
+  "name": "raytracing",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -77,22 +89,20 @@ Is this OK? (yes)
   transform: {}
 };</code></pre>
 <p>以下のコマンドでJestテストが実行できる．</p>
-<pre><code>npm test</code></pre>
+<pre><code>C:\projects\raytracing>npm test</code></pre>
 
-<h2>Setting-up a local server</h2>
+<h2>ローカルサーバーの作成</h2>
 <p>
   作成したJavaScriptをブラウザ上で実行する場合，HTML内でひとつずつJavaScriptファイルを読み込む方法と，JavaScriptのimport/exportを用いて呼び出す方法の2通りが考えられる．
   import/exportはローカルファイル上では機能しないので，ローカルサーバーが必要になる．
   Node.jsを用いれば，実行したいHTMLファイルのあるディレクトリで以下のコマンドを打つと，簡単にローカルサーバーが建てられる．
 </p>
-<pre><code>npx http-server</code></pre>
-
-
+<pre><code>C:\projects\raytracing>npx http-server</code></pre>
 
   </body>
   <footer>
-    <a href="index.html">Ray Tracing in WebGL</a> &#187;
-    <a href="jest.html">Jest testing environment for ES6 modules without Babel</a>
+    <a href="index.html">WebGLでレイトレーシング</a> &#187;
+    <a href="jest.html">ES6モジュールをBabelなしでJestテストする方法</a>
     <span style="float: right">Copyright 2021, Kaname Sasaki</span>
   </footer>
 </html>
