add camera description

--- a/en/index.html
+++ b/en/index.html
@@ -11,13 +11,13 @@
     gtag('config', 'G-CCZTCJYRD8');
   </script>
   <meta charset="UTF-8">
-  <title>Ray Tracing in WebGL</title>
+  <title>Ray Tracing in WebGL2</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 
 <header>
   <a href="https://kanamesasaki.github.io/">Author's page</a> &#187;
-  <a href="index.html">Ray Tracing in WebGL</a>
+  <a href="index.html">Ray Tracing in WebGL2</a>
   <span style="float: right"><ul class="select-lang">
       <li><a href="../en/index.html">English</a></li>
       <li><a href="../de/index.html">Deutsch</a></li>
@@ -25,10 +25,10 @@
   </ul></span>
 </header>
 <body>
-  <h1>Ray Tracing in WebGL</h1>
+  <h1>Ray Tracing in WebGL2</h1>
   <h2>Introduction</h2>
   <p>
-    In this page, basic technics to perform ray tracing are explained. By using the WebGL, it is possible to present the ray tracing results on the web browser.<br>
+    In this page, basic technics to perform ray tracing are explained. By using the WebGL2, it is possible to present the ray tracing results on the web browser.<br>
     Repository: <a href="https://github.com/kanamesasaki/raytracing">https://github.com/kanamesasaki/raytracing</a><br>
   </p>
 
@@ -36,7 +36,8 @@
   <ul>
     <li><a href="jest.html">Jest testing environment for ES6 modules without Babel</a></li>
     <li><a href="import-shader.html">How to import GLSL shader scripts from JavaScript</a></li>
-    <li><a href="">Camera rotation</a></li>
+    <li><a href="camera.html">Camera rotation and zoom</a></li>
+    <li><a href="">Reflection and shadowing</a></li>
   </ul>
 
   <h2>Rendering of Primitive Shapes</h2>
@@ -65,7 +66,7 @@
 
 <footer>
   <a href="https://kanamesasaki.github.io/">Author's page</a> &#187;
-  <a href="index.html">Ray Tracing in WebGL</a>
+  <a href="index.html">Ray Tracing in WebGL2</a>
   <span style="float: right">Copyright 2021, Kaname Sasaki</span>
 </footer>
 </html>
