--- a/ja/index.html
+++ b/ja/index.html
@@ -11,13 +11,13 @@
     gtag('config', 'G-CCZTCJYRD8');
   </script>
   <meta charset="UTF-8">
-  <title>Ray Tracing in WebGL</title>
+  <title>Ray Tracing in WebGL2</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 
 <header>
   <a href="https://kanamesasaki.github.io/">Author's page</a> &#187;
-  <a href="index.html">WebGLでレイトレーシング</a>
+  <a href="index.html">WebGL2でレイトレーシング</a>
   <span style="float: right"><ul class="select-lang">
       <li><a href="../en/index.html">English</a></li>
       <li><a href="../de/index.html">Deutsch</a></li>
@@ -25,18 +25,19 @@
   </ul></span>
 </header>
 <body>
-  <h1>WebGLでレイトレーシング</h1>
+  <h1>WebGL2でレイトレーシング</h1>
   <h2>はじめに</h2>
   <p>
-    WebGLとJavaScriptを用いてレイトレーサを実装すると，Webブラウザ上に計算結果を表示することができます．ここではレイトレーシングの基礎と，WebGLを用いて実装を行う上でのTipsを解説します．<br>
+    WebGL2とJavaScriptを用いてレイトレーサを実装すると，Webブラウザ上に計算結果を表示することができます．
+    ここではレイトレーシングの基礎と，WebGL2を用いて実装を行う上でのTipsを解説します．<br>
     Repository: <a href="https://github.com/kanamesasaki/raytracing">https://github.com/kanamesasaki/raytracing</a><br>
   </p>
 
-  <h2>レイトレースとWebGLの基礎知識</h2>
+  <h2>レイトレースとWebGL2の基礎知識</h2>
   <ul>
     <li><a href="jest.html">ES6モジュールをBabelなしでJestテストする方法</a></li>
     <li><a href="import-shader.html">GLSLシェーダーコードをJavaScriptから読み込む方法</a></li>
-    <li><a href="">カメラの回転移動について</a></li>
+    <li><a href="camera.html">カメラの回転移動とズーム</a></li>
   </ul>
 
   <h2>基礎形状のレンダリング</h2>
@@ -65,7 +66,7 @@
 
 <footer>
   <a href="https://kanamesasaki.github.io/">Author's page</a> &#187;
-  <a href="index.html">WebGLでレイトレーシング</a>
+  <a href="index.html">WebGL2でレイトレーシング</a>
   <span style="float: right">Copyright 2021, Kaname Sasaki</span>
 </footer>
 </html>
