--- a/en/import-shader.html
+++ b/en/import-shader.html
@@ -1,14 +1,23 @@
 <!doctype html>
-<html lang="jp">
+<html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CCZTCJYRD8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CCZTCJYRD8');
+    </script>
     <meta charset="UTF-8">
-    <title>How to import GLSL shader scripts from JavaScript - Ray Tracing in WebGL</title>
+    <title>How to import GLSL shader scripts from JavaScript - Ray Tracing in WebGL2</title>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <link rel="stylesheet" href="../style.css">
   </head>
   <header>
-    <a href="index.html">Ray Tracing in WebGL</a> &#187;
+    <a href="index.html">Ray Tracing in WebGL2</a> &#187;
     <a href="import-shader.html">How to import GLSL shader scripts from JavaScript</a>
     <span style="float: right"><ul class="select-lang">
         <li><a href="../en/index.html">English</a></li>
@@ -20,16 +29,16 @@
   <body>
     <h1>How to import GLSL shader scripts from JavaScript</h1>
     <p>
-      WebGLをブラウザ上で使用する場合，HTMLのscriptタグ内にGLSLコードを直接書き込むことでシェーダのタスクを指定できる．
-      ただ，この方法ではGLSLコードの管理やエディタ上での編集がやりにくいので，GLSLコード部分を別ファイルにして読み込めるようにしたい．
-      おそらくすぐに思いつくのは以下のような書き方だが，残念ながらこれでは読み込むことはできない．
+      If you want to use WebGL on the web browser, you can write GLSL code directly in the HTML file as a script.
+      However, with this method, it is difficult to edit and maintain the GLSL code. 
+      Therefore, it would be better to write the GLSL code in a separate file and import from the other file.
+      One simple idea would be to write the following HTML code, but unfortunately this does not work. 
     </p>
     <pre><code>&lt;script src="shader.glsl" id="vertex-shader" type="x-shader/x-vertex">&lt;/script></code></pre>
     <p>
-      そもそも，GLSLコードをHTMLファイルの中で読み込む必要があるかというとそんなことはない．
-      最初に紹介したHTML内にべた書きする方法で行っているのは，GLSLコードを単なるテキストとしてJavaScriptから参照できるようにしているだけだ．
-      なのでGLSLコードを別ファイルにする場合，そのコードをテキストとして直接JavaScriptから読み込んでしまえばよい．
-      具体的にvertex shaderのコードであれば，以下のようにGLSLコード部分をbackticksで囲んでエクスポートするJavaScriptファイル(vertex-shader.glsl.js)を作る．
+      In principle, it is not necessary to import GLSL code in the HTML file, because GLSL code is required in JavaScript at the end.
+      Therefore, importing GLSL code directly to the JavaScript is actually more simple.
+      You can create a JavaScript file (vertex-shader.glsl.js) containing the shader code as a text by the following way.
     </p>
 <pre><code>export default `#version 300 es
 precision mediump float;
@@ -66,20 +75,23 @@ void main(void) {
     gl_Position = uProjectionMatrix * uModelViewMatrix * vec4(aVertexPosition, 1.0);
 }`
 </code></pre>
-    <p>これを，別のJavaScriptから以下のようにインポートして使用すればよい．このときvertexSourceにはGLSLコードがテキストとして入っている．</p>
+    <p>
+      The exported shader code can be imported from other JavaScript files as shown below.
+      In this case, vertexSource contains the GLSL code as a text.
+    </p>
 <pre><code>import vertexSource from './vertex-shader.glsl.js'
 
 shader = gl.createShader(gl.VERTEX_SHADER)
 gl.shaderSource(shader, shaderString)
 </code></pre>
     <p>
-      この手法についての詳細は以下のページも参考にしてほしい．<br>
+      Regading this method, please see also the following page:<br>
       <a href="https://stackoverflow.com/questions/14219947/why-do-shaders-have-to-be-in-html-file-for-webgl-program">https://stackoverflow.com/questions/14219947/why-do-shaders-have-to-be-in-html-file-for-webgl-program</a>
     </p>
     
   </body>
   <footer>
-    <a href="index.html">Ray Tracing in WebGL</a> &#187;
+    <a href="index.html">Ray Tracing in WebGL2</a> &#187;
     <a href="import-shader.html">How to import GLSL shader scripts from JavaScript</a>
     <span style="float: right">Copyright 2021, Kaname Sasaki</span>
   </footer>
