--- a/en/jest.html
+++ b/en/jest.html
@@ -11,13 +11,13 @@
       gtag('config', 'G-CCZTCJYRD8');
     </script>
     <meta charset="UTF-8">
-    <title>Jest testing environment for ES6 modules without Babel - Ray Tracing in WebGL</title>
+    <title>Jest testing environment for ES6 modules without Babel - Ray Tracing in WebGL2</title>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <link rel="stylesheet" href="../style.css">
   </head>
   <header>
-    <a href="index.html">Ray Tracing in WebGL</a> &#187;
+    <a href="index.html">Ray Tracing in WebGL2</a> &#187;
     <a href="jest.html">Jest testing environment for ES6 modules without Babel</a>
     <span style="float: right"><ul class="select-lang">
         <li><a href="../en/index.html">English</a></li>
@@ -99,7 +99,7 @@ Is this OK? (yes)
 
   </body>
   <footer>
-    <a href="index.html">Ray Tracing in WebGL</a> &#187;
+    <a href="index.html">Ray Tracing in WebGL2</a> &#187;
     <a href="jest.html">Jest testing environment for ES6 modules without Babel</a>
     <span style="float: right">Copyright 2021, Kaname Sasaki</span>
   </footer>
