--- a/ja/import-shader.html
+++ b/ja/import-shader.html
@@ -1,15 +1,24 @@
 <!doctype html>
 <html lang="jp">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CCZTCJYRD8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CCZTCJYRD8');
+    </script>
     <meta charset="UTF-8">
-    <title>How to import GLSL shader scripts from JavaScript - Ray Tracing in WebGL</title>
+    <title>GLSLシェーダーコードをJavaScriptから読み込む方法 - WebGL2でレイトレーシング</title>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <link rel="stylesheet" href="../style.css">
   </head>
   <header>
-    <a href="index.html">Ray Tracing in WebGL</a> &#187;
-    <a href="import-shader.html">How to import GLSL shader scripts from JavaScript</a>
+    <a href="index.html">WebGL2でレイトレーシング</a> &#187;
+    <a href="import-shader.html">GLSLシェーダーコードをJavaScriptから読み込む方法</a>
     <span style="float: right"><ul class="select-lang">
         <li><a href="../en/index.html">English</a></li>
         <li><a href="../de/index.html">Deutsch</a></li>
@@ -18,7 +27,7 @@
   </header>
 
   <body>
-    <h1>How to import GLSL shader scripts from JavaScript</h1>
+    <h1>GLSLシェーダーコードをJavaScriptから読み込む方法</h1>
     <p>
       WebGLをブラウザ上で使用する場合，HTMLのscriptタグ内にGLSLコードを直接書き込むことでシェーダのタスクを指定できる．
       ただ，この方法ではGLSLコードの管理やエディタ上での編集がやりにくいので，GLSLコード部分を別ファイルにして読み込めるようにしたい．
@@ -79,8 +88,8 @@ gl.shaderSource(shader, shaderString)
     
   </body>
   <footer>
-    <a href="index.html">Ray Tracing in WebGL</a> &#187;
-    <a href="import-shader.html">How to import GLSL shader scripts from JavaScript</a>
+    <a href="index.html">WebGL2でレイトレーシング</a> &#187;
+    <a href="import-shader.html">GLSLシェーダーコードをJavaScriptから読み込む方法</a>
     <span style="float: right">Copyright 2021, Kaname Sasaki</span>
   </footer>
 </html>
