--- a/ja/jest.html
+++ b/ja/jest.html
@@ -11,13 +11,13 @@
       gtag('config', 'G-CCZTCJYRD8');
     </script>
     <meta charset="UTF-8">
-    <title>ES6モジュールをBabelなしでJestテストする方法 - WebGLでレイトレーシング</title>
+    <title>ES6モジュールをBabelなしでJestテストする方法 - WebGL2でレイトレーシング</title>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <link rel="stylesheet" href="../style.css">
   </head>
   <header>
-    <a href="index.html">WebGLでレイトレーシング</a> &#187;
+    <a href="index.html">WebGL2でレイトレーシング</a> &#187;
     <a href="jest.html">ES6モジュールをBabelなしでJestテストする方法</a>
     <span style="float: right"><ul class="select-lang">
         <li><a href="../en/index.html">English</a></li>
@@ -101,7 +101,7 @@ Is this OK? (yes)
 
   </body>
   <footer>
-    <a href="index.html">WebGLでレイトレーシング</a> &#187;
+    <a href="index.html">WebGL2でレイトレーシング</a> &#187;
     <a href="jest.html">ES6モジュールをBabelなしでJestテストする方法</a>
     <span style="float: right">Copyright 2021, Kaname Sasaki</span>
   </footer>
