--- a/en/index.html
+++ b/en/index.html
@@ -37,7 +37,7 @@
     <li><a href="jest.html">Jest testing environment for ES6 modules without Babel</a></li>
     <li><a href="import-shader.html">How to import GLSL shader scripts from JavaScript</a></li>
     <li><a href="camera.html">Camera rotation and zoom</a></li>
-    <li><a href="">Reflection and shadowing</a></li>
+    <li><a href="lambert.html">Lambertian reflection</a></li>
   </ul>
 
   <h2>Rendering of Primitive Shapes</h2>
@@ -56,6 +56,319 @@
     <input type="button" style="position:absolute; top:100px; right:180px" value="Rotate Y -10&deg;" id="btn2"/>
     <input type="button" style="position:absolute; top:140px; right:120px" value="Rotate X +10&deg;" id="btn3"/>
     <input type="button" style="position:absolute; top:60px; right:120px" value="Rotate X -10&deg;" id="btn4"/>
+    <button type="button" id="sphere-dialog-open">Sphere</button>
+    <button type="button" id="rectangle-dialog-open">Rectangle</button>
+    <button type="button" id="triangle-dialog-open">Triangle</button>
+    <button type="button" id="disk-dialog-open">Disk</button>
+    <button type="button" id="cylinder-dialog-open">Cylinder</button>
+    <button type="button" id="cone-dialog-open">Cone</button>
+    <button type="button" id="paraboloid-dialog-open">Paraboloid</button>
+
+    <!-- sphere dialog -->
+    <dialog id="sphere-dialog-panel" role="dialog" aria-describedby="d-message">
+      <p id="d-message" role="document">Sphere Data</p>
+      <table>
+        <tr>
+          <td>p1 (x,y,z) [m]</td>
+          <td><input type=number id="sphere-p1" step=0.001></td>
+          <td><input type=number id="sphere-p1" step=0.001></td>
+          <td><input type=number id="sphere-p1" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p2 (x,y,z) [m]</td>
+          <td><input type=number id="sphere-p2" step=0.001></td>
+          <td><input type=number id="sphere-p2" step=0.001></td>
+          <td><input type=number id="sphere-p2" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p3 (x,y,z) [m]</td>
+          <td><input type=number id="sphere-p3" step=0.001></td>
+          <td><input type=number id="sphere-p3" step=0.001></td>
+          <td><input type=number id="sphere-p3" step=0.001></td>
+        </tr>
+        <tr>
+          <td>Radius [m]</td>
+          <td><input type=number id="sphere-radius" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Start Angle [&deg]</td>
+          <td><input type=number id="sphere-start_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>End Angle [&deg]</td>
+          <td><input type=number id="sphere-end_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>Apex Truncation [m]</td>
+          <td><input type=number id="sphere-apex_truncation" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Base Truncation [m]</td>
+          <td><input type=number id="sphere-base_truncation" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Color</td>
+          <td><input type=color id="sphere-color"></td>
+        </tr>
+      </table>
+      <button type="button" id="sphere-dialog-ok">OK</button>
+      <button type="button" id="sphere-dialog-cancel">Cancel</button>
+    </dialog>
+
+    <!-- rectangle dialog -->
+    <dialog id="rectangle-dialog-panel" role="dialog" aria-describedby="d-message">
+      <p id="d-message" role="document">Rectangle Data</p>
+      <table>
+        <tr>
+          <td>p1 (x,y,z) [m]</td>
+          <td><input type=number id="rectangle-p1" step=0.001></td>
+          <td><input type=number id="rectangle-p1" step=0.001></td>
+          <td><input type=number id="rectangle-p1" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p2 (x,y,z) [m]</td>
+          <td><input type=number id="rectangle-p2" step=0.001></td>
+          <td><input type=number id="rectangle-p2" step=0.001></td>
+          <td><input type=number id="rectangle-p2" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p3 (x,y,z) [m]</td>
+          <td><input type=number id="rectangle-p3" step=0.001></td>
+          <td><input type=number id="rectangle-p3" step=0.001></td>
+          <td><input type=number id="rectangle-p3" step=0.001></td>
+        </tr>
+        <tr>
+          <td>Color</td>
+          <td><input type=color id="rectangle-color"></td>
+        </tr>
+      </table>
+      <button type="button" id="rectangle-dialog-ok">OK</button>
+      <button type="button" id="rectangle-dialog-cancel">Cancel</button>
+    </dialog>
+
+    <!-- triangle dialog -->
+    <dialog id="triangle-dialog-panel" role="dialog" aria-describedby="d-message">
+      <p id="d-message" role="document">Triangle Data</p>
+      <table>
+        <tr>
+          <td>p1 (x,y,z) [m]</td>
+          <td><input type=number id="triangle-p1" step=0.001></td>
+          <td><input type=number id="triangle-p1" step=0.001></td>
+          <td><input type=number id="triangle-p1" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p2 (x,y,z) [m]</td>
+          <td><input type=number id="triangle-p2" step=0.001></td>
+          <td><input type=number id="triangle-p2" step=0.001></td>
+          <td><input type=number id="triangle-p2" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p3 (x,y,z) [m]</td>
+          <td><input type=number id="triangle-p3" step=0.001></td>
+          <td><input type=number id="triangle-p3" step=0.001></td>
+          <td><input type=number id="triangle-p3" step=0.001></td>
+        </tr>
+        <tr>
+          <td>Color</td>
+          <td><input type=color id="triangle-color"></td>
+        </tr>
+      </table>
+      <button type="button" id="triangle-dialog-ok">OK</button>
+      <button type="button" id="triangle-dialog-cancel">Cancel</button>
+    </dialog>
+
+    <!-- disk dialog -->
+    <dialog id="disk-dialog-panel" role="dialog" aria-describedby="d-message">
+      <p id="d-message" role="document">Disk Data</p>
+      <table>
+        <tr>
+          <td>p1 (x,y,z) [m]</td>
+          <td><input type=number id="disk-p1" step=0.001></td>
+          <td><input type=number id="disk-p1" step=0.001></td>
+          <td><input type=number id="disk-p1" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p2 (x,y,z) [m]</td>
+          <td><input type=number id="disk-p2" step=0.001></td>
+          <td><input type=number id="disk-p2" step=0.001></td>
+          <td><input type=number id="disk-p2" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p3 (x,y,z) [m]</td>
+          <td><input type=number id="disk-p3" step=0.001></td>
+          <td><input type=number id="disk-p3" step=0.001></td>
+          <td><input type=number id="disk-p3" step=0.001></td>
+        </tr>
+        <tr>
+          <td>Outer Radius [m]</td>
+          <td><input type=number id="disk-outer_radius" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Inner Radius [m]</td>
+          <td><input type=number id="disk-inner_radius" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Start Angle [&deg]</td>
+          <td><input type=number id="disk-start_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>End Angle [&deg]</td>
+          <td><input type=number id="disk-end_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>Color</td>
+          <td><input type=color id="disk-color"></td>
+        </tr>
+      </table>
+      <button type="button" id="disk-dialog-ok">OK</button>
+      <button type="button" id="disk-dialog-cancel">Cancel</button>
+    </dialog>
+
+    <!-- cylinder dialog -->
+    <dialog id="cylinder-dialog-panel" role="dialog" aria-describedby="d-message">
+      <p id="d-message" role="document">Cylinder Data</p>
+      <table>
+        <tr>
+          <td>p1 (x,y,z) [m]</td>
+          <td><input type=number id="cylinder-p1" step=0.001></td>
+          <td><input type=number id="cylinder-p1" step=0.001></td>
+          <td><input type=number id="cylinder-p1" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p2 (x,y,z) [m]</td>
+          <td><input type=number id="cylinder-p2" step=0.001></td>
+          <td><input type=number id="cylinder-p2" step=0.001></td>
+          <td><input type=number id="cylinder-p2" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p3 (x,y,z) [m]</td>
+          <td><input type=number id="cylinder-p3" step=0.001></td>
+          <td><input type=number id="cylinder-p3" step=0.001></td>
+          <td><input type=number id="cylinder-p3" step=0.001></td>
+        </tr>
+        <tr>
+          <td>Radius [m]</td>
+          <td><input type=number id="cylinder-radius" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Height [m]</td>
+          <td><input type=number id="cylinder-height" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Start Angle [&deg]</td>
+          <td><input type=number id="cylinder-start_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>End Angle [&deg]</td>
+          <td><input type=number id="cylinder-end_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>Color</td>
+          <td><input type=color id="cylinder-color"></td>
+        </tr>
+      </table>
+      <button type="button" id="cylinder-dialog-ok">OK</button>
+      <button type="button" id="cylinder-dialog-cancel">Cancel</button>
+    </dialog>
+
+    <!-- cone dialog -->
+    <dialog id="cone-dialog-panel" role="dialog" aria-describedby="d-message">
+      <p id="d-message" role="document">Cone Data</p>
+      <table>
+        <tr>
+          <td>p1 (x,y,z) [m]</td>
+          <td><input type=number id="cone-p1" step=0.001></td>
+          <td><input type=number id="cone-p1" step=0.001></td>
+          <td><input type=number id="cone-p1" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p2 (x,y,z) [m]</td>
+          <td><input type=number id="cone-p2" step=0.001></td>
+          <td><input type=number id="cone-p2" step=0.001></td>
+          <td><input type=number id="cone-p2" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p3 (x,y,z) [m]</td>
+          <td><input type=number id="cone-p3" step=0.001></td>
+          <td><input type=number id="cone-p3" step=0.001></td>
+          <td><input type=number id="cone-p3" step=0.001></td>
+        </tr>
+        <tr>
+          <td>Radius1 [m]</td>
+          <td><input type=number id="cone-radius1" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Radius2 [m]</td>
+          <td><input type=number id="cone-radius2" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Height [m]</td>
+          <td><input type=number id="cone-height" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Start Angle [&deg]</td>
+          <td><input type=number id="cone-start_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>End Angle [&deg]</td>
+          <td><input type=number id="cone-end_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>Color</td>
+          <td><input type=color id="cone-color"></td>
+        </tr>
+      </table>
+      <button type="button" id="cone-dialog-ok">OK</button>
+      <button type="button" id="cone-dialog-cancel">Cancel</button>
+    </dialog>
+
+    <!-- paraboloid dialog -->
+    <dialog id="paraboloid-dialog-panel" role="dialog" aria-describedby="d-message">
+      <p id="d-message" role="document">Paraboloid Data</p>
+      <table>
+        <tr>
+          <td>p1 (x,y,z) [m]</td>
+          <td><input type=number id="paraboloid-p1" step=0.001></td>
+          <td><input type=number id="paraboloid-p1" step=0.001></td>
+          <td><input type=number id="paraboloid-p1" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p2 (x,y,z) [m]</td>
+          <td><input type=number id="paraboloid-p2" step=0.001></td>
+          <td><input type=number id="paraboloid-p2" step=0.001></td>
+          <td><input type=number id="paraboloid-p2" step=0.001></td>
+        </tr>
+        <tr>
+          <td>p3 (x,y,z) [m]</td>
+          <td><input type=number id="paraboloid-p3" step=0.001></td>
+          <td><input type=number id="paraboloid-p3" step=0.001></td>
+          <td><input type=number id="paraboloid-p3" step=0.001></td>
+        </tr>
+        <tr>
+          <td>Radius [m]</td>
+          <td><input type=number id="paraboloid-radius" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Apex Truncation [m]</td>
+          <td><input type=number id="paraboloid-apex_truncation" min=0.0 step=0.001></td>
+        </tr>
+        <tr>
+          <td>Start Angle [&deg]</td>
+          <td><input type=number id="paraboloid-start_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>End Angle [&deg]</td>
+          <td><input type=number id="paraboloid-end_angle" max=360.0 min=0.0 step=0.1></td>
+        </tr>
+        <tr>
+          <td>Color</td>
+          <td><input type=color id="paraboloid-color"></td>
+        </tr>
+      </table>
+      <button type="button" id="paraboloid-dialog-ok">OK</button>
+      <button type="button" id="paraboloid-dialog-cancel">Cancel</button>
+    </dialog>
+
     <canvas id="webgl-canvas">
       Your browser does not support the HTML5 canvas element.
     </canvas>
