--- a/ja/cylinder.html
+++ b/ja/cylinder.html
@@ -60,7 +60,7 @@
     $$
     \begin{gather}
     (X_\mathrm{o} + tU_l)^2 + (Y_\mathrm{o} + tV_l)^2 = r^2 \tag{6} \\
-    (U_l^2 + V_l^2)t^2 + 2(X_\mathrm{o}u_l + Y_\mathrm{o}V_l)t + X_\mathrm{o}^2 + Y_\mathrm{o}^2 - r^2 = 0  \tag{7}
+    (U_l^2 + V_l^2)t^2 + 2(X_\mathrm{o}U_l + Y_\mathrm{o}V_l)t + X_\mathrm{o}^2 + Y_\mathrm{o}^2 - r^2 = 0  \tag{7}
     \end{gather}
     $$
     <p>交点の数は判別式を用いて確認できる．</p>
