--- a/en/cone.html
+++ b/en/cone.html
@@ -22,7 +22,7 @@
     <p>まず円柱を表す式について確認する．下図において，p1が3次元座標の原点，p2がz軸上にある場合，無限に長い円柱は以下の式で表される．</p>
     $$
     \begin{equation}
-    X^2 + Y^2 = (aZ)^2, ~~ \mathrm{where} ~~ a = \frac{|\boldsymbol{p}_2-\boldsymbol{p}_1|}{\mathrm{radius1}-\mathrm{radius2}} \tag{1}
+    X^2 + Y^2 = (aZ)^2, ~~ \mathrm{where} ~~ a = \frac{\mathrm{radius1}-\mathrm{radius2}}{|\boldsymbol{p}_2-\boldsymbol{p}_1|} \tag{1}
     \end{equation}
     $$
     <img src="..\images\cone.svg" width="500">
