--- a/en/paraboloid.html
+++ b/en/paraboloid.html
@@ -46,7 +46,7 @@
     $$
     \begin{gather}
     \left[ \begin{array}{c} X \\ Y \\ Z \end{array} \right] = \left[ \begin{array}{c} X_\mathrm{o} \\ Y_\mathrm{o} \\ Z_\mathrm{o} \end{array} \right] + t \left[ \begin{array}{c} U_l \\ V_l \\ W_l \end{array} \right], ~~
-    \mathrm{where}~ \left[ \begin{array}{c} X_\mathrm{o} \\ Y_\mathrm{o} \\ Z_\mathrm{o} \end{array} \right] = \left[ \begin{array}{ccc} \boldsymbol{R}_\mathrm{X} & \boldsymbol{R}_\mathrm{Y} & \boldsymbol{R}_\mathrm{Z} \end{array} \right]^\mathrm{T} \left\{ \left[ \begin{array}{c} x_\mathrm{o} \\ y_\mathrm{o} \\ z_\mathrm{o} \end{array} \right] - \boldsymbol{p}_0 \right\} ~\mathrm{and}~
+    \mathrm{where}~ \left[ \begin{array}{c} X_\mathrm{o} \\ Y_\mathrm{o} \\ Z_\mathrm{o} \end{array} \right] = \left[ \begin{array}{ccc} \boldsymbol{R}_\mathrm{X} & \boldsymbol{R}_\mathrm{Y} & \boldsymbol{R}_\mathrm{Z} \end{array} \right]^\mathrm{T} \left\{ \left[ \begin{array}{c} x_\mathrm{o} \\ y_\mathrm{o} \\ z_\mathrm{o} \end{array} \right] - \boldsymbol{p}_1 \right\} ~\mathrm{and}~
     \left[ \begin{array}{c} U_l \\ V_l \\ W_l \end{array} \right] = \left[ \begin{array}{ccc} \boldsymbol{R}_\mathrm{X} & \boldsymbol{R}_\mathrm{Y} & \boldsymbol{R}_\mathrm{Z} \end{array} \right]^\mathrm{T} \left[ \begin{array}{c} u_l \\ v_l \\ w_l \end{array} \right] \tag{5}
     \end{gather}
     $$
@@ -54,7 +54,7 @@
     $$
     \begin{gather}
     (X_\mathrm{o} + tU_l)^2 + (Y_\mathrm{o} + tV_l)^2 = a(Z_\mathrm{o} + tW_l) \tag{6} \\
-    (U_l^2 + V_l^2) t^2 + 2(X_\mathrm{o}U_l + Y_\mathrm{o}V_l - a W_l)t + X_\mathrm{o}^2 + Y_\mathrm{o}^2 - a Z_\mathrm{o} = 0  \tag{7}
+    (U_l^2 + V_l^2) t^2 + 2(X_\mathrm{o}U_l + Y_\mathrm{o}V_l - \frac{a}{2} W_l)t + X_\mathrm{o}^2 + Y_\mathrm{o}^2 - a Z_\mathrm{o} = 0  \tag{7}
     \end{gather}
     $$
     <p>交点の数は判別式を用いて確認できる．</p>
@@ -85,6 +85,18 @@
     \begin{equation}
     \mathrm{start\_angle} \le \theta \le \mathrm{end\_angle}, ~~ 
     \mathrm{where}~~ \theta = \mathrm{atan2}(Y, X) \tag{12}
+    \end{equation}
+    $$
+    <p>放物面上のある点における接線の傾きは以下のように表される．</p>
+    $$
+    \begin{equation}
+    Z = \frac{2}{a} \sqrt{X^2 + Y^2} \tag{13}
+    \end{equation}
+    $$
+    <p>これより法線方向への傾きは次のように表すことが出来る．</p>
+    $$
+    \begin{equation}
+    Z = -\frac{a}{2\sqrt{X^2 + Y^2}} \tag{14}
     \end{equation}
     $$
 
