add description for the Lambertian reflection

--- a/ja/index.html
+++ b/ja/index.html
@@ -38,6 +38,7 @@
     <li><a href="jest.html">ES6モジュールをBabelなしでJestテストする方法</a></li>
     <li><a href="import-shader.html">GLSLシェーダーコードをJavaScriptから読み込む方法</a></li>
     <li><a href="camera.html">カメラの回転移動とズーム</a></li>
+    <li><a href="lambert.html">ランバート反射</a></li>
   </ul>
 
   <h2>基礎形状のレンダリング</h2>
