--- a/de/index.html
+++ b/de/index.html
@@ -11,13 +11,13 @@
     gtag('config', 'G-CCZTCJYRD8');
   </script>
   <meta charset="UTF-8">
-  <title>Ray Tracing in WebGL</title>
+  <title>Ray Tracing in WebGL2</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 
 <header>
   <a href="https://kanamesasaki.github.io/">Author's page</a> &#187;
-  <a href="index.html">Ray Tracing in WebGL</a>
+  <a href="index.html">Ray Tracing in WebGL2</a>
   <span style="float: right"><ul class="select-lang">
       <li><a href="../en/index.html">English</a></li>
       <li><a href="../de/index.html">Deutsch</a></li>
@@ -25,7 +25,7 @@
   </ul></span>
 </header>
 <body>
-  <h1>Ray Tracing in WebGL</h1>
+  <h1>Ray Tracing in WebGL2</h1>
   <h2>Introduction</h2>
   <p>
     In this page, basic technics to perform ray tracing are explained. By using the WebGL, it is possible to present the ray tracing results on the web browser.<br>
@@ -36,7 +36,8 @@
   <ul>
     <li><a href="jest.html">Jest testing environment for ES6 modules without Babel</a></li>
     <li><a href="import-shader.html">How to import GLSL shader scripts from JavaScript</a></li>
-    <li><a href="">Camera rotation</a></li>
+    <li><a href="camera.html">Camera rotation</a></li>
+    <li><a href="lambert.html">Lambertian reflection</a></li>
   </ul>
 
   <h2>Rendering of Primitive Shapes</h2>
