--- a/src/html/read-pixels.html
+++ b/src/html/read-pixels.html
@@ -11,14 +11,14 @@
       gtag('config', 'G-CCZTCJYRD8');
     </script>
     <meta charset="UTF-8">
-    <title>Lambertian reflection - Ray Tracing in WebGL2</title>
+    <title>Get data from a shader (GPGPU)</title>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <link rel="stylesheet" href="../style.css">
   </head>
   <header>
     <a href="index.html">Ray Tracing in WebGL2</a> &#187;
-    <a href="import-shader.html">Lambertian reflection</a>
+    <a href="import-shader.html">Get data from a shader (GPGPU)</a>
     <span style="float: right"><ul class="select-lang">
         <li><a href="../en/index.html">English</a></li>
         <li><a href="../de/index.html">Deutsch</a></li>
@@ -27,8 +27,8 @@
   </header>
 
   <body>
-    <h1>Lambertian reflection</h1>
-    <h2>Lambert's cosine law</h2>
+    <h1>Get data from a shader (GPGPU)</h1>
+    <h2>Read pixels</h2>
     <p>
       Under the assumption of Lambertian reflection, the intensity of the reflected light obeys the Lambert's cosine law. 
       The intensity is described by \( I \cos \theta\) for a unit solid angle, where \(\theta\) is an angle with regard to the surface normal.
