--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         gtag('config', 'G-CCZTCJYRD8');
     </script>
     <meta charset="UTF-8">
-    <title>Ray Tracing in WebGL</title>
+    <title>Ray Tracing in WebGL2</title>
 </head>
 <body>
 
     <script>
-        window.location.href = "./en/index.html";    
+        window.location.href = "./src/html/index.html";    
     </script>
 
 </body>
