Corrections for the html files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="UTF-8">
   <title>Ray Tracing in WebGL2</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <header>
@@ -388,7 +388,7 @@
     </canvas>
   </div>
 
-  <script type="module" src="../src/js/main.js"></script>  
+  <script type="module" src="./src/js/main.js"></script>  
 </body>
 
 <footer>
