--- a/paraboloid.html
+++ b/paraboloid.html
@@ -5,15 +5,10 @@
     <title>Rendering of a Rectangle - Ray Tracing in WebGL</title>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <header>
     <a href="index.html">Ray Tracing in WebGL</a> &#187; <a href="paraboloid.html">Paraboloid</a>
-    <span style="float: right"><ul class="select-lang">
-        <li><a href="../en/index.html">English</a></li>
-        <li><a href="../de/index.html">Deutsch</a></li>
-        <li><a href="../ja/index.html">日本語</a></li>
-    </ul></span>
   </header>
 
   <body>
