--- a/lambert.html
+++ b/lambert.html
@@ -14,16 +14,11 @@
     <title>Diffuse and specular reflection - Ray Tracing in WebGL2</title>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <header>
     <a href="index.html">Ray Tracing in WebGL2</a> &#187;
     <a href="import-shader.html">Lambertian reflection</a>
-    <span style="float: right"><ul class="select-lang">
-        <li><a href="../en/index.html">English</a></li>
-        <li><a href="../de/index.html">Deutsch</a></li>
-        <li><a href="../ja/index.html">日本語</a></li>
-    </ul></span>
   </header>
 
   <body>
