Correction image link

--- a/cone.html
+++ b/cone.html
@@ -20,7 +20,7 @@
     X^2 + Y^2 = (aZ)^2, ~~ \mathrm{where} ~~ a = \frac{\mathrm{radius1}-\mathrm{radius2}}{|\boldsymbol{p}_2-\boldsymbol{p}_1|} \tag{1}
     \end{equation}
     $$
-    <img src="..\images\cone.svg" width="500">
+    <img src=".\images\cone.svg" width="500">
     <p>円錐のローカルな基底は以下のように求められる．</p>
     $$
     \begin{equation}
