--- a/cylinder.html
+++ b/cylinder.html
@@ -20,7 +20,7 @@
     x^2 + y^2 = r^2 \tag{1}
     \end{equation}
     $$
-    <img src="..\images\cylinder.svg" width="500">
+    <img src=".\images\cylinder.svg" width="500">
     <p>円柱のローカルな基底は以下のように求められる．これらは一般に，グローバル座標系の基底とは向きが異なり，原点も別の位置にある．</p>
     $$
     \begin{equation}
