--- a/lambert.html
+++ b/lambert.html
@@ -120,7 +120,7 @@
     \boldsymbol{r}_\mathrm{out} = \boldsymbol{r}_\mathrm{in} - 2 \boldsymbol{n} (\boldsymbol{r}_\mathrm{in} \cdot \boldsymbol{n}) \tag{2}
     \end{equation}
 
-    <img src="..\images\specular_reflection.svg" width="500">
+    <img src=".\images\specular_reflection.svg" width="500">
 
     <hr>
     <h2>Uniform distribution on a sphere</h2>
