--- a/rectangle.html
+++ b/rectangle.html
@@ -20,7 +20,7 @@
     \left[ \begin{array}{c} x \\ y \\ z \end{array} \right] = \left[ \begin{array}{c} x_\mathrm{o} \\ y_\mathrm{o} \\ z_\mathrm{o} \end{array} \right] + t \left[ \begin{array}{c} u_l \\ v_l \\ w_l \end{array} \right] \tag{1}
     \end{equation}
     $$
-    <img src="..\images\rectangle.svg" width="500">
+    <img src=".\images\rectangle.svg" width="500">
     <p>長方形のローカルな基底を次のように定める．</p>
     $$
     \begin{equation}
