--- a/sphere.html
+++ b/sphere.html
@@ -20,7 +20,7 @@
     X^2 + Y^2 + Z^2 = r^2 \tag{1}
     \end{equation}
     $$
-    <img src="..\images\sphere.svg" width="500">
+    <img src=".\images\sphere.svg" width="500">
     <p>球のローカルな基底は以下のように求められる．</p>
     $$
     \begin{equation}
