--- a/triangle.html
+++ b/triangle.html
@@ -20,7 +20,7 @@
     \left[ \begin{array}{c} x \\ y \\ z \end{array} \right] = \left[ \begin{array}{c} x_\mathrm{o} \\ y_\mathrm{o} \\ z_\mathrm{o} \end{array} \right] + t \left[ \begin{array}{c} u_l \\ v_l \\ w_l \end{array} \right] \tag{1}
     \end{equation}
     $$
-    <img src="..\images\triangle.svg" width="500">
+    <img src=".\images\triangle.svg" width="500">
     <p>三角形のローカルな基底を次のように定める．ただし\(\boldsymbol{R}_\mathrm{X}\)と\(\boldsymbol{R}_\mathrm{Y}\)は直交しておらず，いずれの基底も正規化されていない．</p>
     $$
     \begin{equation}
