--- a/paraboloid.html
+++ b/paraboloid.html
@@ -20,7 +20,7 @@
     X^2 + Y^2 = aZ, ~~ \mathrm{where} ~~ a = \frac{\mathrm{radius}^2}{|\boldsymbol{p}_2-\boldsymbol{p}_1|} \tag{1}
     \end{equation}
     $$
-    <img src="..\images\paraboloid.svg" width="500">
+    <img src=".\images\paraboloid.svg" width="500">
     <p>放物面のローカルな基底は以下のように求められる．</p>
     $$
     \begin{equation}
